# agentmemory

./: .env.example  .gitignore  PROJECT.md  README.md  pyproject.toml
docs/: agent-setup.md  technical-implementation.md
openspec/changes/add-agent-skill/: design.md  proposal.md  tasks.md
openspec/changes/add-llm-memory-processing/: design.md  proposal.md  tasks.md
openspec/changes/add-llm-provider/: design.md  manual-verification.md  proposal.md  tasks.md
openspec/changes/add-memory-core/: proposal.md  tasks.md
openspec/changes/add-memory-governance/: design.md
openspec/changes/add-memory-search/: design.md  proposal.md  tasks.md
openspec/changes/add-memory-wiki/: design.md
openspec/changes/add-web-viewer/: proposal.md  tasks.md
openspec/changes/bootstrap-python-service/: design.md  tasks.md
openspec/changes/build-agent-memory-platform/: design.md  proposal.md  tasks.md
openspec/changes/upgrade-web-viewer-react/: design.md  proposal.md  tasks.md
openspec/specs/agent-skill/: spec.md
openspec/specs/llm-memory-processing/: spec.md
scripts/: dev.sh  test.sh
skills/agentmemory/: SKILL.md
src/agentmemory/: __init__.py  cli.py  config.py
tests/: conftest.py  test_api_health.py  test_cli.py  test_config.py  test_memory_core_api.py  test_memory_core_service.py  test_memory_search_service.py  test_openai_provider.py  test_project_docs.py  test_project_foundation.py  test_state_kv.py  test_wiki_processing.py
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.module.css  App.tsx  index.css
(+138 files in other folders)
