[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "agentmemory"
version = "0.1.0"
description = "AI native long-term memory service for coding agents"
readme = "PROJECT.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "lancedb>=0.16,<1.0",
  "openai>=1.0,<2.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[project.scripts]
agentmemory = "agentmemory.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentmemory"]

[tool.hatch.build.targets.wheel.force-include]
"src/agentmemory/viewer/index.html" = "agentmemory/viewer/index.html"
